@@ -1,4 +1,4 @@
-<!-- $Id: installation.xml,v 1.24 2004-05-01 23:45:43 adam Exp $ -->
+<!-- $Id: installation.xml,v 1.25 2004-08-18 09:08:58 adam Exp $ -->
  <chapter id="installation"><title>Compilation and Installation</title>
   
   <sect1><title>Introduction</title>
@@ -565,12 +565,22 @@
      <variablelist>
       <varlistentry><term><filename>bin/yaz.dll</filename></term>
        <listitem><para>
-         &yaz; multi-threaded Dynamic Link Library.
+         &yaz; release mode multi-threaded Dynamic Link Library.
         </para></listitem></varlistentry>
       
       <varlistentry><term><filename>lib/yaz.lib</filename></term>
        <listitem><para>
          Import library for <filename>yaz.dll</filename>.
+        </para></listitem></varlistentry>
+      
+      <varlistentry><term><filename>bin/yazdebug.dll</filename></term>
+       <listitem><para>
+         &yaz; debug mode multi-threaded Dynamic Link Library.
+        </para></listitem></varlistentry>
+      
+      <varlistentry><term><filename>lib/yazdebug.lib</filename></term>
+       <listitem><para>
+         Import library for <filename>yazdebug.dll</filename>.
         </para></listitem></varlistentry>
       
       <varlistentry><term><filename>bin/yaz-client.exe</filename></term>
@@ -627,6 +637,8 @@
        </term><listitem><para>
          You must link with this library. It's located in the 
          sub directory <filename>lib</filename> of &yaz;.
+	 If you want to link with the debug version of &yaz;, you must
+	 link with <filename>yazdebug.dll</filename> instead.
         </para></listitem></varlistentry>
       <varlistentry><term>dynamic link library <filename>yaz.dll</filename>
        </term><listitem><para>
