@@ -1,5 +1,9 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+On Windows, the debug version DLL is now named yazdebug.dll (import
+library yazdebug.lib). WIN32 installer includes these files when
+development section is selected.
+
 Added odr_get_element_path which returns current element path for an
 ODR handle. This utility is useful in error handling or user-defined
 ODR_PRINT stream.
